--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,3 +40,21 @@
 .read-the-docs {
   color: #888;
 }
+
+.all-monsters {
+  display: flex;
+  flex-direction: column;
+}
+
+.monster-collection {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.monster {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
